--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,33 @@
 ---
-# tasks file for prov__chrony
+
+- name: ensure tasks run only on selected os releases
+  block:
+
+    - name: install chrony
+      ansible.builtin.package:
+        name: chrony
+        state: present
+      notify: restart chronyd
+
+    #TODO: implement some sort of idempotency
+    - name: configure time sources
+      ansible.builtin.blockinfile:
+        path: /etc/chrony.conf
+        marker: "##### {mark} chrony sources #####"
+        block: "{{ chrony.sources }}"
+        state: present
+      notify: restart chronyd
+
+    - name: start chronyd on boot
+      ansible.builtin.service:
+        name: chronyd
+        state: started
+        enabled: true
+
+  when: >
+    ansible_distribution == "CentOS" or
+    ansible_distribution == "Fedora" or
+    ansible_distribution == "RedHat" or
+    ansible_distribution == "Rocky"
+
+...
